--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,16 @@ python-dateutil==2.8.2
 pytz==2023.3.post1
 pandas-datareader==0.10.0
 
+# Machine Learning dependencies
+prophet==1.1.5
+lightgbm==4.1.0
+scikit-learn==1.3.2
+
 # Dash components
 dash-core-components>=2.0.0
 dash-html-components>=2.0.0
 dash-table>=5.0.0
+dash-bootstrap-components>=1.5.0  # Bootstrap components for Dash
 
 # Server
 Flask==3.0.0
